--- a/UI/ws.html
+++ b/UI/ws.html
@@ -9,8 +9,7 @@
   function init()
   {
     output = document.getElementById("output");
-    
-    setTimeout(function(){ testWebSocket(); }, 1000);
+    testWebSocket(); 
   }
 
   function testWebSocket()
@@ -25,19 +24,23 @@
 
   function onOpen(evt)
   {
+
+
     writeToScreen("CONNECTED");
-    
-    var test = new Uint8Array(10000);
-    for(var i=0;i<test.length;i++)
-    {
-      test[i]=61;
-    }
+    setTimeout(function(){ 
+      var test = new Uint8Array(70000);
+      for(var i=0;i<test.length;i++)
+      {
+        test[i]=61;
+      }
+
+      for(var i=0;i<20;i++)
+      {
+        doSend(test);
+      }
 
 
-    for(var i=0;i<10;i++)
-    {
-      doSend(test);
-    }
+     }, 2000);
   }
 
   function onClose(evt)
@@ -48,12 +51,21 @@
 
 
   var pre=0;//new Date().valueOf()
+  var count=0;
   function onMessage(evt)
   {
     var now=new Date().valueOf()
     if(pre==0)pre=now;
-    console.log("len:",evt.data.length," diff T:",now-pre);
-    console.log(typeof (evt.data)) ;
+    console.log("len:",evt.data.length," diff T:",now-pre, "count:",count++);
+    if(typeof (evt.data) == 'object')
+    {
+      var buffer = new Uint8Array(evt.data);
+      console.log("uint8Arr len:",buffer.length) ;
+    }
+    else
+    {
+      console.log("str len:",evt.data) ;
+    }
 
   }
 
@@ -65,7 +77,8 @@
   function doSend(message)
   {
     // writeToScreen("SENT: " + message);
-    websocket.send(message);
+    var ret = websocket.send(message);
+    console.log(ret);
   }
 
   function writeToScreen(message)
