--- a/UI/ws.html
+++ b/UI/ws.html
@@ -3,13 +3,13 @@
   <title>WebSocket Test</title>
   <script language="javascript" type="text/javascript">
 
-  var wsUri = "ws://localhost:5000";
+  var wsUri = "ws://127.0.0.1:5000";
   var output;
 
   function init()
   {
     output = document.getElementById("output");
-    testWebSocket(); 
+    testWebSocket();
   }
 
   function testWebSocket()
@@ -27,7 +27,7 @@
 
 
     writeToScreen("CONNECTED");
-    setTimeout(function(){ 
+    setTimeout(function(){
       var test = new Uint8Array(1000);
       for(var i=0;i<test.length;i++)
       {
@@ -56,7 +56,7 @@
   {
     var now=new Date().valueOf()
     if(pre==0)pre=now;
-    console.log("len:",evt.data.length," diff T:",now-pre, "count:",count++);
+    console.log(" diff T:",now-pre, "count:",count++);
     if(typeof (evt.data) == 'object')
     {
       var buffer = new Uint8Array(evt.data);
