first time get the raw image

--- a/UI/hy/index.html
+++ b/UI/hy/index.html
@@ -13,6 +13,7 @@
 
     <!-- <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script> -->
     <script type="text/javascript" src="js/xlinx.js"></script>
+    <!-- <script type="text/javascript" src="js/pako_inflate.min.js"></script> -->
     <script type="text/javascript" src="js/ws.js"></script>
     <script type="text/javascript" src="js/canvasX.js"></script>
     <script type="text/javascript" src="js/FETURE_JSON_TEMP.js"></script>
@@ -31,7 +32,7 @@
       <div data-role="collapsible" data-theme="b" data-content-theme="b" data-collapsed="false" data-icon="cloud">
         <h4>放大檢視區 <div style="display:inline;" id="checkAreaTitle2"></div></h4>
         <div style="text-align: center;" id="idnameofdiv">
-          <canvas style="border: 1px solid white;" id="canvas2" ></canvas>
+          <canvas style="display: none; border: 1px solid white;" id="canvas2" ></canvas>
           <canvas style="border: 1px solid white;" id="canvas3" ></canvas>
           
         </div>
