ready to PingDong

--- a/UI/hy/index.html
+++ b/UI/hy/index.html
@@ -23,7 +23,7 @@
   <!-- <body onload="initWSocket();"> -->
     <body>
     <div data-role="page" id="index" data-theme="b">
-      <div data-role="collapsible" data-theme="b" data-content-theme="b" data-collapsed="false" data-icon="cloud">
+      <div data-role="collapsible" data-theme="b" data-content-theme="b" data-collapsed="true" data-icon="cloud">
         <h4>檢測區域 <div style="display:inline;" id="checkAreaTitle"></div></h4>
         <div style="text-align: center;" id="idnameofdiv">
           <canvas style="border: 1px solid white;" id="canvas1" ></canvas>
