--- a/UI/hy/index.html
+++ b/UI/hy/index.html
@@ -19,6 +19,7 @@
 
     <!-- datatable start -->
 
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js"></script>-->
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/tabulator/3.5.3/css/tabulator.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tabulator/3.5.3/js/tabulator.min.js"></script> -->
@@ -29,10 +30,12 @@
     <script type="text/javascript" src="js/xlinx.js"></script>
     <!-- <script type="text/javascript" src="js/pako_inflate.min.js"></script> -->
     <script type="text/javascript" src="js/EventsX.js"></script>
-    <script type="text/javascript" src="js/ws.js"></script>
     <script type="text/javascript" src="js/BPG_Protocol.js"></script>
+    <script type="text/javascript" src="js/ws.js"></script>
+    
     <!-- <script type="text/javascript" src="js/canvasF.js"></script> -->
     <script type="text/javascript" src="js/Tables.js"></script>
+    <script type="text/javascript" src="js/IMGFilter.js"></script>
     <script type="text/javascript" src="js/canvasX.js"></script>
     <script type="text/javascript" src="js/FETURE_JSON_TEMP.js"></script>
     <script type="text/javascript" src="js/FeturesTableX.js"></script>
@@ -111,6 +114,10 @@
                 <div style="display:inline;" id="controlAreaTitle"></div>
             </h4>
             <div id="buttonWrapper" style="text-align: center;">
+                <div class="ui-field-contain">
+                    <label for="slider-3">RAW Brightness:</label>
+                    <input type="range" onchange="RAWBriSlider()" name="slider-3" id="slider-3" step="0.01" value="0.5" min="0" max="1" data-theme="b" data-track-theme="a">
+                </div>
                 <div class="ui-grid-b">
                     <!-- <div class="ui-block-a"><input type="button" id="plus" value="+"></div> -->
                     <div class="ui-block-a">
