--- a/UI/hy/index.html
+++ b/UI/hy/index.html
@@ -27,6 +27,7 @@
 
     <!-- <script type="text/javascript" src="js/fabric.mtouch.min.js"></script> -->
     <!-- <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script> -->
+    <script type="text/javascript" src="js/GlobalParamater.js"></script>
     <script type="text/javascript" src="js/xlinx.js"></script>
     <!-- <script type="text/javascript" src="js/pako_inflate.min.js"></script> -->
     <script type="text/javascript" src="js/EventsX.js"></script>
@@ -116,7 +117,7 @@
             <div id="buttonWrapper" style="text-align: center;">
                 <div class="ui-field-contain">
                     <label for="slider-3">RAW Brightness:</label>
-                    <input type="range" onchange="RAWBriSlider()" name="slider-3" id="slider-3" step="0.01" value="0.5" min="0" max="1" data-theme="b" data-track-theme="a">
+                    <input type="range" onchange="RAWBriSlider(this)" name="slider-3" id="slider-3" step="0.01" value="0.9" min="0" max="1" data-theme="b" data-track-theme="a">
                 </div>
                 <div class="ui-grid-b">
                     <!-- <div class="ui-block-a"><input type="button" id="plus" value="+"></div> -->
