--- a/UI/hy/index0821.html
+++ b/UI/hy/index0821.html
@@ -22,7 +22,7 @@
     <!-- <script type="text/javascript" src="js/pako_inflate.min.js"></script> -->
     <script type="text/javascript" src="js/EventsX.js"></script>
     <script type="text/javascript" src="js/ws.js"></script>
-    <!-- <script type="text/javascript" src="js/canvasF.js"></script> -->
+    <!-- <script type="text/javascript" src="js/CanvasF.js"></script> -->
     <script type="text/javascript" src="js/Tables.js"></script>
     <script type="text/javascript" src="js/canvasX.js"></script>
     <script type="text/javascript" src="js/FETURE_JSON_TEMP.js"></script>
