change many var using class-var

--- a/UI/hy/index.html
+++ b/UI/hy/index.html
@@ -38,9 +38,9 @@
 
     <!-- <script type="text/javascript" src="js/fabric.mtouch.min.js"></script> -->
     <!-- <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script> -->
-    <script type="text/javascript" src="js/GlobalParamater.js"></script>
+
     <script type="text/javascript" src="js/xlinx.js"></script>
-    <script type="text/javascript" src="js/TransformX.js"></script>
+    <!--<script type="text/javascript" src="js/TransformX.js"></script>-->
 
     <!-- <script type="text/javascript" src="js/pako_inflate.min.js"></script> -->
     <script type="text/javascript" src="js/EventsX.js"></script>
@@ -66,6 +66,7 @@
 
     <script src="js/jsonPainter/jquery.jsonPainter-1.0.js"></script>
     <!-- tree -->
+    <script type="text/javascript" src="js/GlobalParamater.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <!-- <body onload="initWSocket();"> -->
