a little bug fix about remove editor-table js.

--- a/UI/hy/index.html
+++ b/UI/hy/index.html
@@ -25,7 +25,7 @@
 
     <!-- <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jqc-1.12.3/dt-1.10.17/b-1.5.2/sl-1.2.6/datatables.min.js"></script> -->
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="Editor174/js/dataTables.editor.js"></script>
+    <!--<script type="text/javascript" src="Editor174/js/dataTables.editor.js"></script>-->
     <!--editorTable-->
 
     <!-- datatable start -->
