translate text DICT setp1 ok.

--- a/UI/hy/newSmapleSetup/index.html
+++ b/UI/hy/newSmapleSetup/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta charset="utf-8" name="viewport" content="width=device-width, user-scalable=no">
   <head>
     <title>ReactJSX</title>
   </head>
@@ -9,5 +9,5 @@
     <div class="HXF widthF800 HCenter" style="max-width:1000px;" id="container">
     </div>
   </body>
-  <script src="bundle.js"></script>
+  <script charset="utf-8" src="bundle.js"></script>
 </html>
