remove width limit for better UI view

--- a/UI/hy/newSmapleSetup/index.html
+++ b/UI/hy/newSmapleSetup/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body class="blockS sp_Style MaT">
-    <div class="HXF widthF800 HCenter" style="max-width:1000px;" id="container">
+    <div class="HXF widthF800 HCenter" id="container">
     </div>
   </body>
   <script charset="utf-8" src="bundle.js"></script>
