Add a magic webpack package split function to reduce update overhead

--- a/UI/WebUI/index.html
+++ b/UI/WebUI/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  manifest="/cache.appcache">
   <meta charset="utf-8" name="viewport" content="width=device-width, user-scalable=no">
   <head>
     <title>ReactJSX</title>
@@ -9,5 +9,6 @@
     <div class="HXF widthF800 HCenter" id="container">
     </div>
   </body>
-  <script charset="utf-8" src="bundle.js"></script>
+  <script charset="utf-8" src="dist/vendors~main.js"></script>
+  <script charset="utf-8" src="dist/main.js"></script>
 </html>
