--- a/UI/WebUI/index.html
+++ b/UI/WebUI/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html  manifest="/cache.appcache">
   <meta charset="utf-8" name="viewport" content="width=device-width, user-scalable=no">
+  <!-- <link rel="manifest" href="PWA_manifest.json"> -->
   <head>
     <title>ReactJSX</title>
   </head>
@@ -11,4 +12,14 @@
   </body>
   <script charset="utf-8" src="dist/vendors~main.js"></script>
   <script charset="utf-8" src="dist/main.js"></script>
+  
+  <script>
+    if(false && 'serviceWorker' in navigator){
+      navigator.serviceWorker.register('service-worker.js').then((reg)=>{
+        console.log("service worker registered",reg);
+      }).catch((err)=>{
+        console.log("service worker register failed",err);
+      })
+    }
+  </script>
 </html>
