CORE:MJPEG_Streamer: update simple web demo

--- a/InspectionCore/MJPEG_Streamer/web/index.html
+++ b/InspectionCore/MJPEG_Streamer/web/index.html
@@ -5,7 +5,7 @@
 
 <h1>The img element</h1>
 
-<img src='http://localhost:7603/live.mjpg'>
+<!-- <img src='http://localhost:7603/live.mjpg'> -->
 
 <canvas id="player" style="background: #000;">
   Your browser sucks.
@@ -15,7 +15,7 @@
 <script src="mjpeg.js"></script>
 <script>
   var player = new MJPEG.Player("player", "http://localhost:7603/live.mjpg");
-  player.start();
+  // player.start();
 </script>
 </html>
 
