Core: update for windows platform

--- a/InspectionCore/MJPEG_Streamer/web/index.html
+++ b/InspectionCore/MJPEG_Streamer/web/index.html
@@ -5,7 +5,7 @@
 
   <h1>The img element</h1>
 
-  <!-- <img src='http://localhost:7603/live.mjpg'> -->
+  <img src='http://localhost:7603/CAM1.mjpg'>
 
   <canvas id="player" style="background: #000;">
     Your browser sucks.
