--- a/UI/Electron_XPLAT/index.html
+++ b/UI/Electron_XPLAT/index.html
@@ -40,7 +40,9 @@
     <button id="Data_Router" class="btn info">Info</button><br/>
     
     <br/><br/>
+    <span id="system_info"></span>
     
+    <br/><br/>
     <button id="btn_RUN" class="btn info">RUN!!</button>
   </body>
   <script src="renderer.js"></script>
