ELectron APP update

--- a/UI/Electron_XPLAT/index.html
+++ b/UI/Electron_XPLAT/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div id="Splash" class="overlay" >
-      <div class="centerXY fontx">XCEPTION tech</div>
+      <div  id="Splash_text" class="centerXY fontx">XCEPTION tech</div>
     </div>
     rootInfoPath:
     <button id="RootInfoPath" class="btn success">Success</button><br/>
