Electron App Launcher: add Launcher version info

--- a/UI/Electron_XPLAT/index.html
+++ b/UI/Electron_XPLAT/index.html
@@ -49,7 +49,10 @@
     <span id="update_select"></span>
     <br/>----  update_log  ----<br/>
     <span id="update_log"></span>
-    <br/>----------------------<br/>
+
+    
+    <br/>----  launcher_info  ----<br/>
+    <span id="launcher_info"></span>
   </body>
   <script src="renderer.js"></script>
 </html>
